--- a/kasa-vite/src/styles/ApartmentDetails.scss
+++ b/kasa-vite/src/styles/ApartmentDetails.scss
@@ -105,6 +105,14 @@
   min-width: 260px;
 }
 @media (max-width: 900px) {
+
+  .apartment-details-container {
+    background: #fff;
+    border-radius: 12px;
+    margin: 32px 10px 40px 10px;
+    width: 100%;
+   
+  }
   .apartment-details-gallery {
     height: 180px;
   }
