--- a/kasa-vite/src/styles/ApartmentGrid.scss
+++ b/kasa-vite/src/styles/ApartmentGrid.scss
@@ -20,7 +20,7 @@
 .apartment-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  gap: 40px 32px;
+  gap: 50px 0px;
   width: 100%;
   box-sizing: border-box;
 }
